--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 asgiref==3.8.1
 Django==5.1
-sqlparse==0.5.1
-python-dotenv==0.19.1
 django-admin-interface==0.28.8
+django-colorfield==0.11.0
+pillow==10.4.0
+python-dotenv==0.19.1
+python-slugify==8.0.4
+sqlparse==0.5.1
+text-unidecode==1.3
